# c-dag

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  Makefile  NOTICE  README-technical  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
configs/: control_frameworks.v1.json  credit_risk_model.v1.json  decision_policy.v1.json  public_cas_policy.v1.json  public_complaint_model.v1.json  public_complaint_policy.v1.json
docs/: api_examples.md  architecture.md  audit_integrity.md  audit_storage_adapter_plan.md  auth_adapter_plan.md  buyer_demo_script.md  commercial_pilot.md  compliance_support.md  config_schema.md  cpd_estimation_workflow.md  data_governance.md  end_to_end_workflow.md  enterprise_seams.md  evidence_pack_workflow.md  fairness_report.md  governance_artifact.md  integration_boundaries.md  known_limitations.md  model_governance_lifecycle.md  openapi.md  paper.md  pilot_evaluation_plan.md  privacy_pii.md  procurement_faq.md  release_notes_v0.2.0.md  replay_proof.md  security_checklist.md  security_posture.md  tenant_isolation_plan.md  use_cases.md
examples/: api_decision_request.json  api_decision_response.json  api_error_invalid_evidence.example.json  api_error_malformed_payload.example.json  api_fairness_request.json  api_fairness_response.json  audit_chain.example.json  audit_chain_verify_failure.example.json  audit_chain_verify_success.example.json  audit_example.json  batch_output.example.csv  batch_with_segments.csv  fairness_report.example.json  input.csv  openapi.json  replay_match.example.json
(+84 files in other folders)
