[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-credit-risk"
version = "0.1.0"
description = "Production-shaped causal explainability engine for credit-risk demos."
readme = "README.md"
license = { text = "BUSL-1.1" }
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "fastapi>=0.110,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "httpx>=0.27,<1",
  "uvicorn>=0.30,<1",
]

[project.scripts]
causal-credit-risk = "causal_credit_risk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
